Bug 168132 - EDITING: Sheet > External Links, file with no Ranges, then with Ranges: greyed out
Summary: EDITING: Sheet > External Links, file with no Ranges, then with Ranges: greye...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.3.0.4 release
Hardware: All All
: medium minor
Assignee: Buovjaga
URL:
Whiteboard: target:26.8.0 target:26.2.1 target:25...
Keywords: bibisected, bisected, implementationError
Depends on:
Blocks:
 
Reported: 2025-08-27 10:44 UTC by Michael Otto
Modified: 2026-01-22 06:20 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
file with no ranges (6.86 KB, application/vnd.oasis.opendocument.spreadsheet)
2025-08-27 10:45 UTC, Michael Otto
Details
file with a range "RangeAB12" (6.99 KB, application/vnd.oasis.opendocument.spreadsheet)
2025-08-27 10:46 UTC, Michael Otto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Otto 2025-08-27 10:44:51 UTC
PRECONDITION:
new or open any Calc file


PROBLEM DESCRIPTION:
first step:
Sheet > External Links, Browse... Insert a file with no ranges
(see e.g. attached empty-no-ranges.odt)
-->"No named ranges available in the selected document" (OK)

next step:
Sheet > External Links, Browse... Insert a file with a range
(see e.g. attached empty-but-range-AB12.odt)
--> the range of this file is shown but greyed out (NOK)

all further file selections in the dialog show greyed out ranges,
only Cancel and open Sheet > External Links again can add the ranges


EXPECTED BEHAVIOR:
also after a file with no ranges has been opened, 
the next file with ranges shall be usable without close/re-open the dialog


Version: 25.8.0.4 (X86_64)
Build ID: 48f00303701489684e67c38c28aff00cd5929e67
CPU threads: 2; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded
Comment 1 Michael Otto 2025-08-27 10:45:25 UTC
Created attachment 202542 [details]
file with no ranges
Comment 2 Michael Otto 2025-08-27 10:46:53 UTC
Created attachment 202543 [details]
file with a range "RangeAB12"
Comment 3 m_a_riosv 2025-08-27 14:47:11 UTC
I can't reproduce
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9653afbbe9ed5b124b2fc3186577c3788f664692
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 4 Buovjaga 2026-01-17 14:37:02 UTC
(In reply to Michael Otto from comment #0)
> PROBLEM DESCRIPTION:
> first step:
> Sheet > External Links, Browse... Insert a file with no ranges
> (see e.g. attached empty-no-ranges.odt)
> -->"No named ranges available in the selected document" (OK)
> 
> next step:
> Sheet > External Links, Browse... Insert a file with a range
> (see e.g. attached empty-but-range-AB12.odt)
> --> the range of this file is shown but greyed out (NOK)

Not greyed out for me when I test with your files.

Michael: please give us an update.

Arch Linux 64-bit
Version: 25.8.4.2 (X86_64) / LibreOffice Community
Build ID: 580(Build:2)
CPU threads: 8; OS: Linux 6.18; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
25.8.4-1
Calc: CL threaded
Comment 5 Michael Otto 2026-01-17 15:32:51 UTC
(In reply to Buovjaga from comment #4)
> Not greyed out for me when I test with your files.
> Michael: please give us an update.

Yes, sorry, my PROBLEM DESCRIPTION above is misleading.

the "next step:" should not contain "Sheet > External Links,..." again 
but leave the dialog open and just directly Browse... again.

This means that the dialog remembers that there is no named range available 
as long as the dialog is open, and does not allow to select a range, 
when a different file is selected with Browse... afterwards.

Luckily in this situation it is anyway possible to import a range. 
Only if there are more ranges in the file, always the first range is used, 
you can not select.

Therefore BTW practically it is a minor problem.


Version: 25.8.4.2 (X86_64)
Build ID: 290daaa01b999472f0c7a3890eb6a550fd74c6df
CPU threads: 5; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Calc: threaded
Comment 6 Buovjaga 2026-01-17 16:05:11 UTC
Sorry, I was testing it wrong. I did not actually use a blank file, but the first attachment.

This started happening after the grey text about no named ranges found was added in 6.3 with 022deeb79ef693550ea762c9cc899806ae4b374c
Make it more obvious that there are no named ranges

I will try to fix it.
Comment 7 Buovjaga 2026-01-17 19:54:29 UTC
Patch: https://gerrit.libreoffice.org/c/core/+/197509

Will show it to some UI guru next week to check, if I'm missing any further improvement opportunities.
Comment 8 Commit Notification 2026-01-18 12:36:59 UTC
Ilmari Lauhakangas committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c6028a9ce60f25027b2901e9cc03b3a8f8883810

tdf#168132 Make sure ranges do not show as disabled in Calc's

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2026-01-18 13:36:06 UTC
Ilmari Lauhakangas committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/23c58b0b95ba30dbe67ab451f07ddc2ef9e2070e

tdf#168132 Make sure ranges do not show as disabled in Calc's

It will be available in 26.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2026-01-19 10:42:48 UTC
Ilmari Lauhakangas committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/cabded5bde897bf627f1ede3e1835e18fadffd83

tdf#168132 Make sure ranges do not show as disabled in Calc's

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Michael Otto 2026-01-21 21:43:55 UTC
(In reply to Commit Notification from comment #8)
> Ilmari Lauhakangas committed a patch related to this issue.
> 
> It will be available in 26.8.0.
> 
Thanks!

works fine for me with Linux-rpm_deb-x86_64@tb99-TDF (deb) 2026-01-21 04:20:04

Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 63e4293827a6ed112b2cda317f80938acb35849f
CPU threads: 5; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded