tdf#168132 Make sure ranges do not show as disabled in Calc's

External Data dialog

Change-Id: I5cc64cea920f778e33f0a3e28e082839ceb8314a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197509
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>
Tested-by: Jenkins